--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react-redux": "^7.1.32",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.6.2",
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.0.2",
@@ -47,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21"
   }
 }
